Changes to make bootstrap put logs in the correct place. Make tomcat war install work with log4j2. Update grails asset plugin.

--- a/rundeckapp/grails-app/assets/scss/paper/_select.scss
+++ b/rundeckapp/grails-app/assets/scss/paper/_select.scss
@@ -61,7 +61,7 @@
     }
   }
 
-  &.el-select-dropdown.is-multiple
+  #{if(&, "&", "*")}.el-select-dropdown.is-multiple,
   .el-select-dropdown__item.selected{
     &.select-#{$type}{
       color: $color;
